vlib/v/checker/tests/struct_field_init_with_nobody_anon_fn_err.vv
struct App {
	cb fn(x int) // the function signature doesn't make a difference
}

fn main() {
	_ = App{
		cb: fn(x int)  // Note the missing `{}` (the function body) here
	}
}
